Call action is done

--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,13 @@ body {
 
 @media (min-width: 600px) {
 
+  .call-action > h2 {
+    font-size: 36px;
+  }
+  .call-action > p {
+    font-size: 24px;
+  }
+
   .about {
     padding: 5% 0% 5%;
   }
