--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,26 @@ body {
 
 @media (min-width: 600px) {
 
+  .services {
+    padding-top: 5%;
+  }
+  .services > h2 {
+    font-size: 36px;
+    padding-top: 1%;
+    padding-bottom: 3%;
+  }
+  .services i {
+    font-size: 46px;
+  }
+
+  .services p {
+    font-size: 20px;
+  }
+
+  .services h3 {
+    font-size: 26px;
+  }
+
   .call-action > h2 {
     font-size: 36px;
   }
