--- a/css/style.css
+++ b/css/style.css
@@ -396,3 +396,44 @@ body {
 
   
 }
+
+@media (min-width: 1000px) {
+
+  .about {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .about h2 {
+    width: 100%;
+    padding-bottom: 2%;
+  }
+  .about div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 95%;
+    padding-top: 5%;
+  }
+  .about figure {
+    width: 30%;
+
+    padding: 0;
+  }
+
+  .testimonials {
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
+
+  .testimonials h2 {
+    font-size: 50px;
+  }
+  .testimonials > p {
+    font-size: 30px;
+  }
+
+  footer [class^="fa-"] {
+    font-size: 24px;
+  }
+}
