--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,27 @@ body {
 
 @media (min-width: 1000px) {
 
+  .call-action {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   padding-top: 5%;
+   padding-bottom: 5%;
+  }
+
+  .call-action p {
+    padding-top: 3%;
+    width: 80%;
+    font-size: 28px;
+  }
+
+  .call-action > h2 {
+    width: fit-content;
+    border-bottom: 2px solid cornflowerblue;
+    font-size: 50px;
+    padding-bottom: 2%;
+  }
+
   .about {
     flex-direction: row;
     flex-wrap: wrap;
@@ -406,6 +427,7 @@ body {
 
   .about h2 {
     width: 100%;
+    font-size: 36px;
     padding-bottom: 2%;
   }
   .about div {
