service is done

--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,13 @@ body {
 
 @media (min-width: 1000px) {
 
+  .services > article {
+    width: 25%;
+  }
+  .services > h2 {
+
+  }
+
   .call-action {
     display: flex;
     flex-direction: column;
