computer section is done

--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,20 @@ body {
 
 @media (min-width: 1000px) {
 
+  .computer {
+    flex-direction: row;
+    justify-content: center;
+
+  }
+  .computer > article {
+    padding: 0;
+    width: 45%;
+  }
+
+  .computer > article :nth-child(2) {
+    align-items: flex-start;
+  }
+
   .services > article {
     width: 25%;
   }
